--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>Navegação - Google Maps</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Navegação Estilo Google Maps</title>
 
 <style>
     body,html{
@@ -45,7 +45,7 @@
         transform:scale(.9);
     }
 
-    /* Ponto azul externo */
+    /* ponto azul */
     .location-dot {
         width: 24px;
         height: 24px;
@@ -56,7 +56,7 @@
         position: relative;
     }
 
-    /* Seta de direção */
+    /* seta */
     .direction-arrow {
         width: 0;
         height: 0;
@@ -69,18 +69,6 @@
         transform: translateX(-50%);
         filter: drop-shadow(0 0 4px rgba(0,0,0,0.4));
     }
-
-    @media (max-width: 768px) {
-        .map-control {
-            top: 70px;
-            right: 10px;
-        }
-        .control-btn {
-            width: 44px;
-            height: 44px;
-            font-size: 16px;
-        }
-    }
 </style>
 </head>
 <body>
@@ -92,19 +80,56 @@
     <button id="btnCenterUser" class="control-btn">📍</button>
 </div>
 
+
+<!-- GOOGLE MAPS COM LIBRARY MARKER (OBRIGATÓRIO) -->
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyApaDb9rSw2sNTaY7fjBqmrgjWYD9xwjcU&callback=initMap&v=beta&libraries=marker" async defer></script>
+
+
 <script>
 let map;
 let userMarker = null;
 let watchId = null;
-let is3D = false;
-let _anim3D = false;
 let kalman = null;
 let lastHeading = 0;
 let lastSpeed = 0;
+let is3D = false;
+let _anim3D = false;
 
-/* ============================
-   KALMAN FILTER PARA GPS SUAVE
-   ============================ */
+/* ==============================
+   FUNÇÕES DE SEGURANÇA
+   ============================== */
+
+function safeAdvancedMarker(pos, content) {
+    try {
+        if (google.maps.marker && google.maps.marker.AdvancedMarkerElement) {
+            return new google.maps.marker.AdvancedMarkerElement({
+                map,
+                position: pos,
+                content: content
+            });
+        }
+    } catch(e) {
+        console.warn("AdvancedMarkerElement falhou, usando Marker comum.");
+    }
+
+    return new google.maps.Marker({
+        map,
+        position: pos,
+        icon:{
+            path: google.maps.SymbolPath.CIRCLE,
+            scale: 10,
+            fillColor: "#1a73e8",
+            fillOpacity: 1,
+            strokeColor: "white",
+            strokeWeight: 3
+        }
+    });
+}
+
+/* ==============================
+   KALMAN FILTER
+   ============================== */
+
 class Kalman {
     constructor(R=0.0008, Q=0.00001){
         this.R = R;
@@ -132,56 +157,37 @@ class Kalman {
     }
 }
 
-/* ============================
+/* ==============================
    INTERPOLAÇÃO SUAVE
-   ============================ */
+   ============================== */
 function lerp(a,b,t){ return a+(b-a)*t; }
 
 function animateTo(marker, newPos, duration=450){
-    if(!marker.position){
+    if(!marker.getPosition){
         marker.setPosition(newPos);
         return;
     }
 
-    const startLat = marker.position.lat();
-    const startLng = marker.position.lng();
-    const endLat = newPos.lat();
-    const endLng = newPos.lng();
-    const start = performance.now();
+    const start = marker.getPosition();
+    const sLat = start.lat();
+    const sLng = start.lng();
+    const eLat = newPos.lat();
+    const eLng = newPos.lng();
+    const startTime = performance.now();
 
-    function step(now){
-        const t = Math.min((now-start)/duration,1);
-        const lat = lerp(startLat,endLat,t);
-        const lng = lerp(startLng,endLng,t);
-        marker.setPosition(new google.maps.LatLng(lat,lng));
-        if(t<1) requestAnimationFrame(step);
+    function frame(now){
+        const t = Math.min((now - startTime) / duration, 1);
+        const lat = lerp(sLat, eLat, t);
+        const lng = lerp(sLng, eLng, t);
+        marker.setPosition(new google.maps.LatLng(lat, lng));
+        if(t < 1) requestAnimationFrame(frame);
     }
-    requestAnimationFrame(step);
+    requestAnimationFrame(frame);
 }
 
-/* ============================
-   INICIAR MAPA
-   ============================ */
-function initMap(){
-    map = new google.maps.Map(document.getElementById("map"),{
-        center:{lat:-23.55,lng:-46.63},
-        zoom:18,
-        tilt:0,
-        heading:0,
-        gestureHandling:"greedy",
-        disableDefaultUI:false,
-        mapId:"ebb7ca4503045feabc75b373"
-    });
-
-    kalman = new Kalman();
-
-    startTracking();
-}
-window.initMap = initMap;
-
-/* ============================
-   MARCADOR ESTILO ANDROID 13
-   ============================ */
+/* ==============================
+   MARCADOR (D)
+   ============================== */
 function createDirectionMarker(){
     const root = document.createElement("div");
     const dot = document.createElement("div");
@@ -193,107 +199,118 @@ function createDirectionMarker(){
     return root;
 }
 
-/* ============================
-   RASTREAMENTO EM TEMPO REAL
-   ============================ */
+/* ==============================
+   INICIAR MAPA
+   ============================== */
+function initMap(){
+    map = new google.maps.Map(document.getElementById("map"),{
+        center:{lat:-23.55,lng:-46.63},
+        zoom:18,
+        tilt:0,
+        heading:0,
+        gestureHandling:"greedy",
+        mapId:"ebb7ca4503045feabc75b373"
+    });
+
+    kalman = new Kalman();
+
+    startTracking();
+}
+window.initMap = initMap;
+
+/* ==============================
+   RASTREAMENTO GPS
+   ============================== */
 function startTracking(){
     if(!navigator.geolocation){
-        alert("Geolocalização não suportada.");
+        alert("Seu navegador não suporta GPS.");
         return;
     }
 
-    const options = {
-        enableHighAccuracy:true,
-        timeout:7000,
-        maximumAge:0
-    };
+    const opt = {enableHighAccuracy:true, timeout:7000, maximumAge:0};
 
     navigator.geolocation.getCurrentPosition(pos=>{
         const p = {lat:pos.coords.latitude, lng:pos.coords.longitude};
         map.setCenter(p);
 
-        userMarker = new google.maps.marker.AdvancedMarkerElement({
-            map,
-            position:p,
-            content:createDirectionMarker()
-        });
+        userMarker = safeAdvancedMarker(p, createDirectionMarker());
 
-        watchId = navigator.geolocation.watchPosition(updatePosition, geoError, options);
-    },geoError,options);
+        watchId = navigator.geolocation.watchPosition(updatePosition, gpsError, opt);
+    }, gpsError, opt);
 }
 
-/* ============================
-   ATUALIZAÇÃO + KALMAN + SETA
-   ============================ */
+/* ==============================
+   ATUALIZAÇÃO DO GPS
+   ============================== */
 function updatePosition(position){
-    const lat = position.coords.latitude;
-    const lng = position.coords.longitude;
+    const rawLat = position.coords.latitude;
+    const rawLng = position.coords.longitude;
 
-    const filtered = kalman.filter2D(lat,lng);
+    const filtered = kalman.filter2D(rawLat, rawLng);
 
     const newPos = new google.maps.LatLng(filtered.lat, filtered.lng);
-    animateTo(userMarker,newPos,500);
 
-    /* heading do dispositivo */
+    animateTo(userMarker, newPos, 450);
+
+    /* Heading */
     if(position.coords.heading !== null){
         lastHeading = position.coords.heading;
         rotateArrow(lastHeading);
         map.setHeading(lastHeading);
     }
 
-    /* velocidade (para tilt e zoom dinâmicos) */
+    /* Velocidade → tilt + zoom */
     if(position.coords.speed !== null){
         lastSpeed = position.coords.speed;
-
         const tilt = Math.min(60, lastSpeed * 6);
         map.setTilt(tilt);
-
-        const zoom = lastSpeed > 8 ? 17.2 : 18;
-        map.setZoom(zoom);
+        map.setZoom(lastSpeed > 8 ? 17.2 : 18);
     }
 
-    /* câmera segue */
+    /* Seguir o usuário */
     map.panTo(newPos);
 }
 
-/* ============================
-   SETA DIRECIONAL
-   ============================ */
+/* ==============================
+   Seta direcional
+   ============================== */
 function rotateArrow(deg){
+    if(!userMarker.content) return;
     const arrow = userMarker.content.querySelector(".direction-arrow");
-    arrow.style.transform = `translateX(-50%) rotate(${deg}deg)`;
+    if(arrow){
+        arrow.style.transform = `translateX(-50%) rotate(${deg}deg)`;
+    }
 }
 
-/* ============================
-   ERROS DE GPS
-   ============================ */
-function geoError(e){
-    console.warn("GPS erro:", e);
-    alert("Ative o GPS e reinicie o app.");
+/* ==============================
+   ERRO DE GPS
+   ============================== */
+function gpsError(e){
+    console.warn(e);
+    alert("Ative o GPS e recarregue.");
 }
 
-/* ============================
-   CENTRALIZAR MANUALMENTE
-   ============================ */
+/* ==============================
+   CENTRALIZAR MANUAL
+   ============================== */
 document.getElementById("btnCenterUser").onclick = ()=>{
     if(!userMarker) return;
-    map.panTo(userMarker.position);
+    map.panTo(userMarker.getPosition());
     map.setZoom(18);
 };
 
-/* ============================
-   BOTÃO 3D
-   ============================ */
+/* ==============================
+   MODO 3D
+   ============================== */
 function animateValue(start,end,dur,onUpdate,onFinish){
-    const s = performance.now();
-    function step(n){
-        const t = Math.min((n-s)/dur,1);
-        const v = lerp(start,end,t);
-        onUpdate(v);
-        if(t<1) requestAnimationFrame(step);
+    const t0 = performance.now();
+    function f(now){
+        const t = Math.min((now-t0)/dur,1);
+        onUpdate( lerp(start,end,t) );
+        if(t<1) requestAnimationFrame(f);
         else if(onFinish) onFinish();
     }
-    requestAnimationFrame(step);
+    requestAnimationFrame(f);
 }
 
 document.getElementById("btnToggle3D").onclick = ()=>{
@@ -301,12 +318,12 @@ document.getElementById("btnToggle3D").onclick = ()=>{
     _anim3D = true;
 
     if(!is3D){
-        is3D=true;
+        is3D = true;
         btnToggle3D.textContent="2D";
         animateValue(map.getTilt(),60,600,val=>map.setTilt(val));
         animateValue(map.getHeading(),lastHeading||0,600,val=>map.setHeading(val),()=>_anim3D=false);
     } else {
-        is3D=false;
+        is3D = false;
         btnToggle3D.textContent="3D";
         animateValue(map.getTilt(),0,600,val=>map.setTilt(val));
         animateValue(map.getHeading(),0,600,val=>map.setHeading(val),()=>_anim3D=false);
